--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,11 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 max_line_length = 80
+
+[jest.config.js]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
+indent_style = tab
+trim_trailing_whitespace = true
+max_line_length = 80
